fixed broken css class

--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -9,7 +9,7 @@
 
   @include clearfix();
 
-  .col-1of-2 {
+  .col-1-of-2 {
     width: calc((100% - #{$gutter-horizontal}) / 2);
     background-color: orangered;
     float: left;
